--- a/src/Styles/Footer.module.scss
+++ b/src/Styles/Footer.module.scss
@@ -3,5 +3,41 @@
       height: 20rem;
       background-color: rgb(22, 26, 24);;
       color: white;
+      position: relative;
+      & .contact{
+            position: absolute;
+            top: 25px;
+            right: 50px;
+            font-size: 1.8rem;
+            padding: .5rem;
+           & h3{
+            margin-bottom: 2rem;
+           }
+             & p{
+                  margin-bottom: 2rem;
+                  padding-bottom: .5rem;
+                  position: relative;
+                  & span{
+                      position: absolute;
+                     top:.5rem;
+                     left:-4rem
+                  };
+             }
 
-}
+      }
+      & .terms{
+        width:100%;
+        position:absolute;
+        left:75rem;
+        top:5rem;
+        font-size:1.7rem;
+        & ul {
+            list-style: none;
+            
+            & li{
+                  padding-bottom: 2rem;
+               
+            }
+      }
+
+}}
