--- a/src/Styles/FoodItem.module.scss
+++ b/src/Styles/FoodItem.module.scss
@@ -1,16 +1,15 @@
 .foodItem {
       width: 550px;
       height: 500px;
-      border: 2px solid gray;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      margin-top: 20px;
+      margin: 30px;
       border-radius: 10px;
       box-shadow: 5px 5px 5px 5px gray;
+      display: grid;
+      grid-template-columns: repeat(1fr, 3);
+      grid-template-rows: repeat(1fr,3);
       & h1{
-        font-size: 30px;
+        font-size: 50px;
+        text-align: center;
 
       }
     
@@ -22,22 +21,26 @@
     
       & .button {
         display: flex;
-        justify-content: space-between;
-        margin-top: 20px;
+        justify-content: space-around;
+        margin-bottom: 10px;
+       
         button{
          width: 150px;
           color: white;
           border: none;
           border-radius: 10px;
-          padding: 11px;
-          margin-left: 40px;
+          cursor: pointer;
+      
         }
     
         button:first-child { 
           background-color: rgb(13, 19, 13);
         }
         button:last-child{
-            background-color: red;
+            background-color: rgb(197, 6, 6);
+        }
+        button:last-child:hover{
+          font-size: 1.6rem;
         }
       
       }
