--- a/src/Styles/Recipies.module.scss
+++ b/src/Styles/Recipies.module.scss
@@ -7,8 +7,8 @@
       flex-wrap: wrap;
 }
 .recipies{
-      width: 450px;
-      height: 450px;
+      width: 480px;
+      height: 460px;
       border: 2px solid grey;
       margin: 20px;
       border-radius: 15px;
@@ -25,4 +25,30 @@
             height: 350px;
             border-radius: 15px;
       }
+
+      & .buttons {
+            display: flex;
+            justify-content: space-between;
+            margin-top: 0px;
+            button{
+             width: 150px;
+              color: white;
+              border: none;
+              border-radius: 10px;
+              padding: 11px;
+              margin: 10px;
+              cursor: pointer;
+            }
+        
+            button:first-child { 
+              background-color: rgb(13, 19, 13);
+            }
+            button:last-child{
+                background-color: rgb(197, 6, 6);
+            }
+            button:last-child:hover{
+              font-size: 1.6rem;
+            }
+          
+          }
 }
