--- a/src/Styles/favorite.module.scss
+++ b/src/Styles/favorite.module.scss
@@ -1,10 +1,21 @@
-.favorite{
+.container{
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
 
-      width: 450px;
-      border: 1px solid red;
+
+
+.favorite{
+      width: 550px;
+      height: 550px;
       margin: 10px;
       padding: 20px;
       box-shadow: 5px 5px 5px 3px gray;
+      position: relative;
+      border-radius: 25px;
+ 
      
        & img{
             width: 100%;
@@ -14,4 +25,51 @@
             font-size: 3rem;
             padding: 5px;
        }
-}
+       & p{
+         position: absolute;
+         width: 40px;
+         height: 40px;
+         text-align: center;
+         padding-top: 5px;
+         color: red;
+         cursor: pointer;
+         font-size: 28px;
+         top: 10px;
+         right: 15px;
+         border-radius: 50%;
+         
+       }
+       & .buttons {
+          display: flex;
+          justify-content: space-between;
+          margin-top: 40px;
+          width: 450px;
+     
+         
+          button{
+           width: 150px;
+            color: white;
+            border: none;
+            border-radius: 10px;
+            padding: 11px;
+            margin-left: 40px;
+            cursor: pointer;
+          }
+      
+          button:first-child { 
+            background-color: rgb(13, 19, 13);
+          }
+         
+         
+        
+        }
+        & h4{
+          font-size: 29px;
+          font-weight: bold;
+          margin-top: 20px;
+          & span{
+            color: green;
+            font-size: 25px;
+          }
+         }
+}}
