--- a/src/Styles/Foods.module.scss
+++ b/src/Styles/Foods.module.scss
@@ -2,5 +2,6 @@
       width: 100%;
       display: flex;
       flex-wrap: wrap;
-      margin-bottom: 60px;
+      justify-content: center;
+      align-items: center;
 }
