--- a/src/Styles/favorite.module.scss
+++ b/src/Styles/favorite.module.scss
@@ -1,7 +1,7 @@
 .container{
   width: 100%;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   flex-wrap: wrap;
 
